# kasuku

./: Cargo.toml  Kasuku.toml  README.md
.github/workflows/: release-plugins.yml  tests.yml
core/backend/: Cargo.toml
core/backend/src/: lib.rs  main.rs  query.rs  subscription.rs
core/frontend/: Cargo.toml  Trunk.toml  index.html
core/frontend/src/: graphql.rs  main.rs  tab_view.rs
core/frontend/static/: defaults.css
core/interface/: Cargo.toml
core/interface/src/: lib.rs
core/macros/: Cargo.toml
core/macros/src/: lib.rs
core/tauri/: Cargo.toml
core/types/: Cargo.toml
core/types/src/: config.rs  lib.rs
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  main.rs  mutation.rs  query.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: main.rs  ws.rs
crates/frontend/static/: defaults.css
crates/tauri/: tauri.conf.json
crates/tauri/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: config.rs  database.rs  lib.rs  node.rs
crates/types/src/components/: task_list.rs
plugins/dataview/: Cargo.toml
plugins/dataview/src/: lib.rs
plugins/tasks/: Cargo.toml
plugins/tasks/src/: card.rs  lib.rs
utils/context/: Cargo.toml
utils/context/src/: lib.rs  payload.rs
utils/database/: Cargo.toml  README.md
utils/database/src/: lib.rs
utils/distribution/: Cargo.toml
utils/distribution/src/: lib.rs  main.rs
utils/files/markdown/: Cargo.toml
utils/files/markdown/src/: lib.rs
utils/node/: Cargo.toml
utils/node/src/: lib.rs
