[workspace]
members = [
    "core/backend",
    "core/frontend",
    "core/macros",
    # "crates/tauri",
    "core/types",
    "core/interface",
    "utils/database",
    "utils/distribution",
    "utils/context",
    "utils/files/markdown",
    "utils/node",
    "plugins/tasks",
    "plugins/dataview",
    "plugins/template"

]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
