[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { version = "0.4.0", features = ["dom"] }
wasm-bindgen = "0.2.87"
js-sys = "0.3"
gloo-file = "0.3.0"
gloo-net = "0.3.0"
serde = "1"
serde_json = "1"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Document",
    "NodeList",
]
