[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.4", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = "1"
types = { path = "../types" }
plugy = { version = "0.2.1", default-features = false, features = [
    "runtime",
    "macros",
] }
anyhow = "1"
bincode = "1"
heck = "0.4"
oci-distribution = "0.9"
hirola = { version = "0.3.1", features = ["ssr", "serde"] }
serde_json = "1"


