[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws"] }
async-graphql = { version = "6.0.11" }
async-graphql-axum = "6.0.11"
tower-http = { version = "0.4", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = "1"
types = { path = "../types" }
kasuku-database = { path = "../database" }
plugy = { version = "0.3.1", default-features = false, features = [
    "runtime",
    "macros",
] }
anyhow = "1"
bincode = "1"
heck = "0.4"
hirola = { version = "0.4.0-beta.0", default-features = false }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
async-walkdir = "0.2.0"
notify = "6.1.1"
xtra = { git = "https://github.com/Restioson/xtra", features = [
    "tokio",
    "macros",
] }
futures = "0.3"
pulldown-cmark-to-cmark = "11.0.2"
pulldown-cmark = { version = "0.9.3" }
