[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = "1"
solvent = "0.8.3"
hirola = { version = "0.3.1", features = ["ssr", "serde"] }
plugy = { path = "../../../plugy"  }
serde_json = "1"
serde-error = "0.1.2"