[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = "1"
solvent = "0.8.3"
hirola = { version = "0.3.1", features = ["ssr", "serde"] }
plugy = { version = "0.2.1"  }
serde-json-wasm = "1.0.0"
serde-error = "0.1.2"
url = { version = "2", features = ["serde"] }
