[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["rc"] }
solvent = "0.8.3"
hirola = { version = "0.4.0-beta.0", default-features = false }
plugy = { version = "0.3.1" }
serde_json = "1"
serde-error = "0.1.2"
url = { version = "2", features = ["serde"] }
bincode = "1"
thiserror =  "1"
pulldown-cmark = { version = "0.9.3", features = ["serde"] }
sqlparser = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
xtra = { git = "https://github.com/Restioson/xtra", features = ["tokio", "macros"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
plugy = { version = "0.3.1", default-features = false, features = ["runtime"] }
oci-distribution = "0.9"
kasuku-database = { path = "../database" }


