[package]
name = "dataview"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
plugy = { version = "0.3.1" }
types = { path = "../../core/types" }
interface = { path = "../../core/interface" }
markdown = { path = "../../utils/files/markdown", default-features = false}
context = { path = "../../utils/context", default-features = false}
serde = { version = "1", features = ["derive"] }
