[package]
name = "kasuku-tasks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugy = { path = "../../../plugy"  }
types = { path = "../../crates/types" }
serde = { version = "1", features = ["derive"] }
hirola = { version = "0.3.1", features = ["ssr", "serde"] }
