[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugy = { version = "0.3.1" }
types = { path = "../../core/types" }
interface = { path = "../../core/interface" }
markdown = { path = "../../utils/files/markdown", default-features = false}
context = { path = "../../utils/context", default-features = false}
node = { path = "../../utils/node" }
serde = { version = "1", features = ["derive"] }
hirola = { version = "0.4.0-beta.0", default-features = false }
serde_json = "1"
serde_prefix = "0.1.0"
