[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../../core/types" }
hirola = { version = "0.4.0-beta.0", default-features = false }
plugy = { version = "0.3.1" }
bincode = "1"
serde = "1"
serde-json-wasm = "1.0.0"
