[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["backend"]
backend = ["tokio", "regex"]

[dependencies]
pulldown-cmark = { version = "0.9.3", features = ["serde"] }
types = { path = "../../../core/types" }
serde = "1"
tokio = { version = "1", optional = true }
bincode = "1"
regex = { version = "1.10.2", optional = true }
